<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registry_researcher"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:fitsSystemWindows="true"
        tools:context=".views.activities.RegistryActivity">

        <ProgressBar
            android:id="@+id/progress_horizontal_registry_researcher"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/include"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include"
            tools:visibility="visible" />

        <include
            android:id="@+id/include"
            layout="@layout/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="true"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_horizontal_registry_researcher">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guia_izq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/activity_vertical_margin" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guia_der"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="42dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintGuide_end="@dimen/activity_vertical_margin" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_researcher_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/NOMBRE"
                    app:endIconDrawable="@drawable/ic_clear_text_black_24dp"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toStartOf="@+id/guia_der"
                    app:layout_constraintStart_toEndOf="@+id/iv_icon_name"
                    app:layout_constraintTop_toBottomOf="@+id/iv_logo_registry">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_researcher_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:inputType="textCapWords"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/iv_logo_registry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="false"
                    android:contentDescription="@string/LOGO_REGISTRO"
                    android:cropToPadding="false"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toStartOf="@+id/guia_der"
                    app:layout_constraintStart_toStartOf="@+id/guia_izq"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/add_person_circle" />

                <ImageView
                    android:id="@+id/iv_icon_name"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/ICONO_NOMBRE_INVESTIGADOR"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="@+id/il_researcher_name"
                    app:layout_constraintStart_toStartOf="@+id/guia_izq"
                    app:layout_constraintTop_toTopOf="@+id/il_researcher_name"
                    app:srcCompat="@drawable/ic_person_black_24dp"
                    app:tint="@color/colorSecondaryVariant" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_researcher_last_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/APELLIDO"
                    app:endIconDrawable="@drawable/ic_clear_text_black_24dp"
                    app:endIconMode="clear_text"
                    app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintEnd_toStartOf="@+id/guia_der"
                    app:layout_constraintStart_toEndOf="@+id/iv_icon_name"
                    app:layout_constraintTop_toBottomOf="@+id/il_researcher_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_researcher_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:inputType="textCapWords"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_researcher_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/EMAIL"
                    app:endIconDrawable="@drawable/ic_clear_text_black_24dp"
                    app:endIconMode="clear_text"
                    app:layout_constraintEnd_toStartOf="@+id/guia_der"
                    app:layout_constraintStart_toEndOf="@+id/iv_icon_email"
                    app:layout_constraintTop_toBottomOf="@+id/il_researcher_last_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_researcher_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/iv_icon_email"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/ICONO_EMAIL_INVESTIGADOR"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="@+id/il_researcher_email"
                    app:layout_constraintStart_toStartOf="@+id/guia_izq"
                    app:layout_constraintTop_toTopOf="@+id/il_researcher_email"
                    app:srcCompat="@drawable/ic_email_black_24dp"
                    app:tint="@color/colorSecondaryVariant" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_researcher_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/CONTRASEÑA"
                    app:endIconCheckable="true"
                    app:layout_constraintEnd_toStartOf="@+id/guia_der"
                    app:layout_constraintStart_toEndOf="@+id/iv_icon_password"
                    app:layout_constraintTop_toBottomOf="@+id/il_researcher_email"
                    app:passwordToggleContentDescription="Mostrar contraseña"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_researcher_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/iv_icon_password"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/ICONO_PASS_INVESTIGADOR"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="@+id/il_researcher_password"
                    app:layout_constraintStart_toStartOf="@+id/guia_izq"
                    app:layout_constraintTop_toTopOf="@+id/il_researcher_password"
                    app:srcCompat="@drawable/ic_lock_black_24dp"
                    app:tint="@color/colorSecondaryVariant" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/il_research_confirm_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/CONFIRMAR_NUEVA_PASS"
                    app:layout_constraintEnd_toStartOf="@+id/guia_der"
                    app:layout_constraintStart_toEndOf="@+id/iv_icon_password"
                    app:layout_constraintTop_toBottomOf="@+id/il_researcher_password"
                    app:passwordToggleContentDescription="Mostrar contraseña"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_research_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_registry"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/REGISTRAR"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guia_der"
                    app:layout_constraintStart_toStartOf="@+id/guia_izq"
                    app:layout_constraintTop_toBottomOf="@+id/il_research_confirm_password"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

