...
    <string name="TEMA_NOTIFICACION_REGISTRO" translatable="false">RegistroInvestigador</string>
    <string name="CANAL_NOMBRE">Activations alert</string>
    <string name="CANAL_DESCRIPCION">Registration alerts for new researchers</string>

    <!-- Titulos Toolbar -->
    <string name="TITULO_TOOLBAR_PERFIL">Profile</string>
    <string name="TITULO_TOOLBAR_REGISTRO">Register</string>
    <string name="TITULO_TOOLBAR_NUEVO_ENTREVISTADO">New Interviewee</string>
    <string name="TITULO_TOOLBAR_EDITAR_ENTREVISTADO">Edit Interviewee</string>
    <string name="TITULO_TOOLBAR_NUEVA_ENTREVISTA">New Interview</string>
    <string name="TITULO_TOOLBAR_EDITAR_ENTREVISTA">Edit Interview</string>
    <string name="TITULO_TOOLBAR_CREAR_EVENTO">New event</string>
    <string name="TITULO_TOOLBAR_EVENTOS">Events</string>
    <string name="TITULO_TOOLBAR_LISTA_ENTREVISTAS">Interviews List</string>
    <string name="TITULO_TOOLBAR_EDITAR_PERFIL">Edit Profile</string>
    <string name="TITULO_TOOLBAR_CONTACTO">Contact us</string>
    <string name="TITULO_TOOLBAR_EDITAR_EVENTO">Edit Event</string>
    <string name="TITULO_TOOLBAR_LISTADO_INVESTIGADORES">Researchers list</string>
    <string name="TITULO_TOOLBAR_LISTADO_ACCIONES">Actions List</string>
    <string name="TITULO_TOOLBAR_NUEVA_ACCION">New Action</string>
    <string name="TITULO_TOOLBAR_EDITAR_ACCION">Edit Action</string>
    <string name="TITULO_TABLEAU" translatable="false">Tableau</string>

    <!-- SHARED PREF KEYS-->
    <string name="SHARED_PREF_MASTER_KEY" translatable="false">udelvd</string>
    <string name="SHARED_PREF_INVES_ID" translatable="false">id_investigador</string>
...
    <string name="MENU_CERRAR_SESION">Log out</string>
    <string name="MENU_GENERAL">General</string>
    <string name="MENU_MI_PERFIL">My profile</string>
    <string name="MENU_LISTA_ENTREVISTADOS">Interviewees</string>
    <string name="MENU_ESTADISTICAS">Statistics</string>
    <string name="MENU_CONFIGURACION">Configuration</string>
    <string name="MENU_GUARDAR_DATOS">Save</string>
    <string name="MENU_ENTREVISTA_VER_EVENTO">Show events</string>
    <string name="MENU_ENTREVISTA_EDITAR">Edit interview</string>
    <string name="MENU_ENTREVISTA_ELIMINAR">Delete interview</string>
    <string name="MENU_PERFIL_EDITAR">Edit profile</string>
    <string name="MENU_CONDICIONES">Conditions and privacy</string>
    <string name="MENU_CONTACTENOS">Contact us</string>
...
