...
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toStartOf="@+id/guia_der"
                app:layout_constraintStart_toEndOf="@+id/iv_icon_spanish"
                app:layout_constraintTop_toBottomOf="@+id/tv_instruction">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_action_spanish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:inputType="textMultiLine|textCapSentences"
                    android:singleLine="true"
                    android:textSize="16sp" />
...
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toStartOf="@+id/guia_der"
                app:layout_constraintStart_toEndOf="@+id/iv_icon_spanish"
                app:layout_constraintTop_toBottomOf="@+id/il_action_spanish">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_action_english"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:inputType="textMultiLine|textCapSentences"
                    android:singleLine="true"
                    android:textSize="16sp" />
...
